# dprint-plugin-svgo

./: .dprint.jsonc  .dprint.local.jsonc  .gitattributes  .gitignore  .gitmodules  .rustfmt.toml  AGENTS.md  AUDIT_FILES.txt  CLAUDE.md  Cargo.toml  FINDINGS_VISUALIZATION.txt  LICENSE  README.md  SECURITY_AUDIT.md  SECURITY_RECOMMENDATIONS.md  SECURITY_SUMMARY.txt  TODO.md  bundle.ts  deno.json  deno.jsonc  justfile  rust-toolchain.toml  rustfmt.toml  schema.json  tsdown.config.ts
.config/: lefthook.yml
.github/: dependabot.yml
.github/workflows/: check-updates.yml  check_updates.yml  ci.generate.ts  ci.yml  pages.yml  release.yml
.serena/: project.yml
.zed/: settings.json
base/: Cargo.toml
base/src/: build.rs  channel.rs  lib.rs  runtime.rs  snapshot.rs  util.rs
claudedocs/: API_REFERENCE.md  ARCHITECTURE.md  PROJECT_DOCUMENTATION.md
js/: console.js  main.js  svgo.ts
js/node/: build.js  build.ts  main.ts  package-lock.json  package.json  tsconfig.json
patches/temporal_capi/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  README.md
patches/temporal_capi/src/: calendar.rs  duration.rs  error.rs  instant.rs  lib.rs  options.rs  plain_date.rs  plain_date_time.rs  plain_month_day.rs  plain_time.rs  plain_year_month.rs  provider.rs  time_zone.rs  zoned_date_time.rs
patches/temporal_rs/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  Cargo.toml.orig  README.md
patches/temporal_rs/.cargo/: config.toml
patches/temporal_rs/src/: error.rs  host.rs  iso.rs  lib.rs  options.rs  parsed_intermediates.rs  parsers.rs  primitive.rs  provider.rs  rounding.rs  sys.rs  tzdb.rs  utils.rs
patches/temporal_rs/src/builtins/: mod.rs
patches/temporal_rs/src/builtins/compiled/: duration.rs  instant.rs  mod.rs  now.rs  plain_date.rs  plain_date_time.rs  plain_month_day.rs  plain_year_month.rs  zoned_date_time.rs
patches/temporal_rs/src/builtins/compiled/duration/: tests.rs
patches/temporal_rs/src/builtins/core/: calendar.rs  duration.rs  instant.rs  now.rs  plain_date.rs  plain_date_time.rs  plain_month_day.rs  plain_time.rs  plain_year_month.rs  time_zone.rs  zoned_date_time.rs
patches/temporal_rs/src/builtins/core/calendar/: fields.rs  types.rs
patches/temporal_rs/src/builtins/core/duration/: date.rs  normalized.rs  tests.rs
patches/temporal_rs/src/builtins/core/zoned_date_time/: tests.rs
patches/temporal_rs/src/options/: increment.rs  relative_to.rs
patches/temporal_rs/src/parsers/: time_zone.rs
plugin/: Cargo.toml  build.rs
plugin/examples/: test_svg_config.rs  test_svg_formatting.rs  test_svgo_plugins.rs
plugin/src/: config.rs  error.rs  formatter.rs  handler.rs  lib.rs  main.rs  process_loop.rs  process_messages.rs  schema.rs
plugin/tests/: config_tests.rs  tests.rs
scripts/: create_for_testing.ts  create_plugin_file.ts  generate_schema.ts  lib.ts  local_test.ts  output_local_plugin_ref.ts  output_svgo_version.ts  schema_types.ts  update.ts
site/: build.ts  index.html  index.ts  package.json  schema-viewer.css  schema-viewer.html  schema-viewer.ts  style.css  tsconfig.json
