[workspace]
resolver = "3"
members  = ["base", "plugin"]

[workspace.dependencies]
async-channel      = "2.5"
deno_core          = "0.397"
dprint-core        = "0.67"
dprint-development = "0.10"
pretty_assertions  = "1.4"
proptest           = "1"
schemars           = { version = "1", features = ["derive"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = { version = "1", features = ["preserve_order"] }
sha256             = "1.6"
sysinfo            = { version = "0.38", default-features = false, features = ["system"] }
thiserror          = "2"
tokio              = { version = "1", features = ["macros", "rt", "time"] }
tokio-util         = "0.7"
zstd               = "0.13"

[workspace.dependencies.dprint-plugin-deno-base]
path     = "base"
version  = "0.2.0"
features = ["build"]

# Patch temporal_rs to fix icu_calendar 2.2.0 incompatibility
# See: https://github.com/denoland/rusty_v8/issues/1952
# Remove once v8 crate updates to temporal_capi >= 0.2.1
[patch.crates-io]
temporal_rs = { path = "patches/temporal_rs" }

# rusty-v8 needs at least -O1 to not miscompile
[profile.dev.package.v8]
opt-level = 1

[profile.release.package.deno_core]
opt-level = 3

[profile.release.package.serde]
opt-level = 3

[profile.release.package.serde_v8]
opt-level = 3

[profile.release.package.tokio]
opt-level = 3

[profile.release.package.url]
opt-level = 3

[profile.release.package.v8]
opt-level = 3

[profile.release.package.zstd]
opt-level = 3

[profile.release.package.zstd-sys]
opt-level = 3
