[workspace]
resolver = "3"
members  = ["base", "patches/*", "plugin"]

[workspace.package]
version      = "0.2.2"
edition      = "2024"
rust-version = "1.86.0"
readme       = "README.md"
homepage     = "https://github.com/kjanat/dprint-plugin-svgo#readme"
repository   = "https://github.com/kjanat/dprint-plugin-svgo"
license      = "MIT"
publish      = false

[workspace.dependencies]
async-channel            = "2.5"
calendrical_calculations = "0.2"
core_maths               = "0.1"
deno_core                = "0.397"
dprint-core              = "0.67"
dprint-development       = "0.10"
iana-time-zone           = "0.1"
icu_locale_core          = "2.1"
log                      = "0.4"
pretty_assertions        = "1.4"
proptest                 = "1"
sha256                   = "1.6"
thiserror                = "2"
tinystr                  = "0.8"
tokio-util               = "0.7"
web-time                 = "1.1"
writeable                = "0.6"
zoneinfo64               = "0.3"
zstd                     = "0.13"

[workspace.dependencies.diplomat]
version          = "0.15"
default-features = false

[workspace.dependencies.diplomat-runtime]
version          = "0.15"
default-features = false

[workspace.dependencies.dprint-plugin-deno-base]
path     = "base"
features = ["build"]

[workspace.dependencies.icu_calendar]
version          = "2.2"
default-features = false
features         = ["compiled_data"]

[workspace.dependencies.ixdtf]
version  = "0.6"
features = ["duration"]

[workspace.dependencies.num-traits]
version          = "0.2"
default-features = false

[workspace.dependencies.serde]
version  = "1"
features = ["derive"]

[workspace.dependencies.serde_json]
version  = "1"
features = ["preserve_order"]

[workspace.dependencies.sysinfo]
version          = "0.38"
default-features = false
features         = ["system"]

[workspace.dependencies.temporal_capi]
path = "patches/temporal_capi/"

[workspace.dependencies.temporal_rs]
path             = "patches/temporal_rs/"
default-features = false

[workspace.dependencies.timezone_provider]
version  = "0.2.3"
features = ["experimental_tzif", "zoneinfo64"]

[workspace.dependencies.tokio]
version  = "1"
features = ["macros", "rt", "time"]

# Vendor temporal_rs + temporal_capi at latest source, labelled 0.1.2
# to satisfy v8 147's semver constraint (^0.1.2).
# Remove once v8 ships with temporal_capi >= 0.2.x
[patch.crates-io]
temporal_capi = { path = "patches/temporal_capi" }
temporal_rs   = { path = "patches/temporal_rs" }

# rusty-v8 needs at least -O1 to not miscompile
[profile.dev.package.v8]
opt-level = 1

[profile.release.package.deno_core]
opt-level = 3

[profile.release.package.serde]
opt-level = 3

[profile.release.package.serde_v8]
opt-level = 3

[profile.release.package.tokio]
opt-level = 3

[profile.release.package.url]
opt-level = 3

[profile.release.package.v8]
opt-level = 3

[profile.release.package.zstd]
opt-level = 3

[profile.release.package.zstd-sys]
opt-level = 3
