[package]
name        = "dprint-plugin-deno-base"
version     = "0.2.0"
edition     = "2024"
description = "Helper code for creating a formatting plugin for dprint with deno_core."
readme      = "../README.md"
homepage    = "https://github.com/kjanat/dprint-plugin-svgo"
repository  = "https://github.com/kjanat/dprint-plugin-svgo"
license     = "MIT"
keywords    = ["formatter", "formatting", "svg", "svgo"]
categories  = ["development-tools"]

[dependencies]
async-channel.workspace = true
deno_core.workspace     = true
serde.workspace         = true
serde_json.workspace    = true
sysinfo.workspace       = true
tokio-util.workspace    = true
zstd.workspace          = true

[dependencies.dprint-core]
workspace = true
features  = ["process"]

[dependencies.tokio]
workspace = true
features  = ["macros", "rt", "time"]

[dev-dependencies]
pretty_assertions.workspace = true

[features]
build = []
