[package]
name                 = "dprint-plugin-deno-base"
version.workspace    = true
edition.workspace    = true
description          = "Helper code for creating a formatting plugin for dprint with deno_core."
readme.workspace     = true
homepage.workspace   = true
repository.workspace = true
license.workspace    = true
keywords             = ["formatter", "formatting", "svg", "svgo"]
categories           = ["development-tools"]

[dependencies]
async-channel.workspace = true
deno_core.workspace     = true
serde.workspace         = true
serde_json.workspace    = true
sysinfo.workspace       = true
tokio-util.workspace    = true
zstd.workspace          = true

[dependencies.dprint-core]
workspace = true
features  = ["process"]

[dependencies.tokio]
workspace = true
features  = ["macros", "rt", "time"]

[dev-dependencies]
pretty_assertions.workspace = true

[features]
build = []
