[package]
name        = "dprint-plugin-svgo"
version = "0.2.2"
edition     = "2024"
description = "A dprint plugin for formatting and optimizing SVG files using SVGO"
readme      = "../README.md"
repository  = "https://github.com/kjanat/dprint-plugin-svgo"
license     = "MIT"
keywords    = ["formatter", "formatting", "svg", "svgo"]
categories  = ["development-tools"]

[[bin]]
name              = "generate-schema"
path              = "src/bin/generate-schema.rs"
required-features = ["schema"]

[dependencies]
deno_core.workspace     = true
dprint-core             = { workspace = true, features = ["process"] }
dprint-plugin-deno-base = { workspace = true }
schemars                = { workspace = true, optional = true }
serde.workspace         = true
serde_json.workspace    = true
thiserror.workspace     = true
tokio                   = { workspace = true, features = ["time"] }

[dev-dependencies]
dprint-development.workspace = true
pretty_assertions.workspace  = true
proptest.workspace           = true

[build-dependencies]
deno_core               = { workspace = true, features = [
  "include_js_files_for_snapshotting",
] }
dprint-plugin-deno-base = { workspace = true, features = ["build"] }
sha256.workspace        = true
zstd.workspace          = true

[features]
default = []
schema  = ["dep:schemars"]
