[package]
name                 = "dprint-plugin-svgo"
version.workspace    = true
edition.workspace    = true
description          = "A dprint plugin for formatting and optimizing SVG files using SVGO"
readme.workspace     = true
repository.workspace = true
license.workspace    = true
keywords             = ["formatter", "formatting", "svg", "svgo"]
categories           = ["development-tools"]

[dependencies]
deno_core.workspace               = true
dprint-plugin-deno-base.workspace = true
serde.workspace                   = true
serde_json.workspace              = true
thiserror.workspace               = true

[dependencies.dprint-core]
workspace = true
features  = ["process"]

[dependencies.tokio]
workspace = true
features  = ["time"]

[dev-dependencies]
dprint-development.workspace = true
pretty_assertions.workspace  = true
proptest.workspace           = true

[build-dependencies]
sha256.workspace = true
zstd.workspace   = true

[build-dependencies.deno_core]
workspace = true
features  = ["include_js_files_for_snapshotting"]

[build-dependencies.dprint-plugin-deno-base]
workspace = true
features  = ["build"]

[features]
default = []
