[package]
name                   = "temporal_rs"
version                = "0.1.2"
edition                = "2024"
rust-version.workspace = true
description            = "Temporal in Rust is an implementation of the TC39 Temporal Builtin Proposal in Rust."
readme                 = "README.md"
repository             = "https://github.com/boa-dev/temporal"
license                = "MIT OR Apache-2.0"
keywords               = ["calendar", "date", "duration", "time", "timezone"]
categories             = ["date-and-time", "internationalization"]
build                  = false
exclude                = [".github/*", ".gitignore", "CONTRIBUTING.md", "cliff.toml", "debug/", "docs/*", "tests/data/zoneinfo64.res"]
autobins               = false
autoexamples           = false
autotests              = false
autobenches            = false

[package.metadata.cargo-all-features]
denylist             = ["default"]
max_combination_size = 4

[package.metadata.docs.rs]
all-features = true

[lib]
name = "temporal_rs"
path = "src/lib.rs"

[dependencies]
core_maths.workspace        = true
icu_calendar.workspace      = true
icu_locale.workspace        = true
ixdtf.workspace             = true
num-traits.workspace        = true
timezone_provider.workspace = true
tinystr.workspace           = true
writeable.workspace         = true

[dependencies.iana-time-zone]
workspace = true
optional  = true

[dependencies.log]
workspace = true
optional  = true

[dependencies.web-time]
workspace = true
optional  = true

[dev-dependencies]
zoneinfo64.workspace = true

[features]
default                         = ["sys"]
compiled_data                   = ["tzdb"]
float64_representable_durations = []
log                             = ["dep:log"]
std                             = []
sys                             = ["compiled_data", "dep:iana-time-zone", "dep:web-time", "std"]
tzdb                            = ["std", "timezone_provider/tzif"]
